--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -264,7 +264,7 @@ The most important functions in IGV for this thesis are:
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{softwareResults/IGVcloseup.jpg}
-	\caption{A few reads up close in the IGV analysing software. Notice how the color coded bases are substitutions}
+	\caption{A few reads up close in the IGV analysing software. Notice how the color coded bases are substitutions. Moreover, a gap and insertion is also visible}
 	\label{fig:IGVcloseup}
 \end{figure}
 
