--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -54,4 +54,6 @@ Where the second attribute in the CELL type is the direction.
 
 \section{Hardware acceleration}
 
+It turns out, HLS does not support in/out matrix to memory yet.
+
 \section{Comparison with the software}
