--- a/thesis.tex
+++ b/thesis.tex
@@ -111,8 +111,8 @@
 % onder embargo? laat leeg indien van niet; vul de datum in als dd-mm-yyyy indien van wel
 %\embargo{25-10-2015}
 
-\title{Building a hardware accelerator for DNA sequence alignment  using an MPSoC}
-\subtitle{acceleration of the Smith-Waterman algorithm for reference genome mapping with a Multi-Processor System on Chip?}
+\title{Using an MPSoC to implement DNA sequence alignment}
+\subtitle{An implementation and acceleration of the Smith-Waterman algorithm}
 % \author{naam student}
 \forenameA{Robin}
 \surnameA{Nollet}
@@ -123,9 +123,9 @@
 
 \academicyear{2019 - 2020}
 
-\promotorA[Supervisors]{Ing. Václav \v{S}imek}
+\promotorA[Co-supervisors]{Ing. Václav \v{S}imek}
 \promotorB[]{Ing. Jonas Lannoo}
-%\promotorC[]{dr. Bedrijf Baas (Bedrijf)}
+\promotorC[Supervisor]{Prof. dr. ir. Davy Pissoort}
 
 \begin{document}
 % \selectlanguage{dutch}
