--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -56,4 +56,10 @@ Where the second attribute in the CELL type is the direction.
 
 It turns out, HLS does not support in/out matrix to memory yet.
 
+slices
+
+direction of matrix (first column then row).
+
+Bitwidth of (packed) data on axi master must be power of 2. => change the int to int16\_t and direction to uint16\_t (really wastefull towards memory) but no other choice without major remodel.
+
 \section{Comparison with the software}
