--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -8,7 +8,7 @@
 
 \section{Analysing software performance}
 
-In the SDSoC environment, it is possible to analyse the software running on the SoC chip using a TCF profiler. After running this analysis, the TCF profiler returns an overview of the functions, sorted on the amount of time spent when running. The analysis is shown in figure \ref{fig:softwareFunctionUsage}
+In the SDSoC environment, it is possible to analyze the software running on the SoC chip using a TCF profiler. After running this analysis, the TCF profiler returns an overview of the functions, sorted on the amount of time spent when running. The analysis is shown in figure \ref{fig:softwareFunctionUsage}
 
 \begin{figure}[H]
 	\centering
@@ -17,7 +17,7 @@ In the SDSoC environment, it is possible to analyse the software running on the 
 	\label{fig:softwareFunctionUsage}
 \end{figure}
 
-When examining this analysis, we should keep in mind that the generateCell, coordToAddr and sim functions are inline functions used in the FillInMatrix method. Just as suspected the software spends almost all of its time in these methods, so it's worth it to try to accelerate these functions.
+When examining this analysis, we should keep in mind that the generateCell, coordToAddr, and sim functions are inline functions used in the FillInMatrix method. Just as suspected the software spends almost all of its time in these methods, so it's worth it to try to accelerate these functions.
 
 \section{Recoding parts of the software to be more hardware friendly}
 
@@ -34,27 +34,27 @@ Back in 2011, Vermij E. did a thesis on RVE (recursive variable expansion). In i
 It seemed like a good idea to reimplement the generatecell function, using this newly found scheme. However, it is also important to keep track of where the value comes from. Therefore, the following (new) code was adopted for generating a cell:
 
 \begin{lcverbatim}
-//calculate the possible  values
-CELL diagonalCELL = { diagonal.value + sim(refVal, seqVal), 1 };
-CELL leftCELL = { left.value - gp, 2 };
-CELL upCELL = { up.value - gp, 3 };
-CELL zeroCELL = { 0, 0 };
-
-CELL upstreamA = (leftCELL.value > upCELL.value) ? leftCELL : upCELL;
-CELL upstreamB = (diagonalCELL.value > zeroCELL.value) ? 
-					diagonalCELL : zeroCELL;
-
-CELL newCell = (upstreamA.value > upstreamB.value) ? upstreamA : upstreamB;
-
-//Return the cell:
-return newCell;
+	//calculate the possible  values
+	CELL diagonalCELL = { diagonal.value + sim(refVal, seqVal), 1 };
+	CELL leftCELL = { left.value - gp, 2 };
+	CELL upCELL = { up.value - gp, 3 };
+	CELL zeroCELL = { 0, 0 };
+	
+	CELL upstreamA = (leftCELL.value > upCELL.value) ? leftCELL : upCELL;
+	CELL upstreamB = (diagonalCELL.value > zeroCELL.value) ? 
+	diagonalCELL : zeroCELL;
+	
+	CELL newCell = (upstreamA.value > upstreamB.value) ? upstreamA : upstreamB;
+	
+	//Return the cell:
+	return newCell;
 \end{lcverbatim}
 
 Where the second attribute in the CELL type is the direction.
 
 \section{Hardware acceleration}
 
-It turns out, HLS does not support in/out matrix to memory yet.
+It turns out, HLS does not support an in/out matrix to memory yet.
 
 slices
 
